methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:38: error: expected class or object definition
def DebutFin(){
^PictureMono2:46: error: expected class or object definition
def colorieCase(){
^PictureMono2:51: error: Unmatched closing brace '}' ignored here
}
^