methods.picture.PictureMono2.scala.code
override def run() {
}


def dessineMotifV(){
  colorieCase()
  gauche()
  avance()
  droite()
  avance()
  colorieCase()
  avance()
  droite()
  avance()
  colorieCase()
  
}

 DebutFin()
  for (i <- 1 to 4){
    Dessiner()
    if(i <= 3){
      faireV()
    } else{
      gauche()
      DebutFin()
      gauche()
    }
  }
  
}



/** 
* place le buggle correctement en d?but et fin d'algo
*/
def DebutFin(){
  for( i <- 1 to 2){
    avance()
  }
}
/**
* colorie uniquement la case ou se trouve le buggle
*/
def colorieCase(){
  baisseBrosse()
  leveBrosse()
}